--- a/app/globals.css
+++ b/app/globals.css
@@ -114,3 +114,13 @@ html {
 .gameActions {
   grid-area: actions;
 } */
+/* const loveStyle = {
+  width: "50px",
+  height: "50px",
+  borderRadius: "50%",
+  backgroundImage: `conic-gradient(from 0deg at 50% 50%, #0000 0deg, #0000 ${relationshipToDegrees(
+    relationshipLove
+  )}deg, black ${relationshipToDegrees(relationshipLove)}deg, black ${
+    360 - relationshipToDegrees(relationshipLove)
+  }deg, #0000 ${360 - relationshipToDegrees(relationshipLove)}deg)`,
+}; */
